Fixed the select2 placeholder text being cut off - Bug #1465107
behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -160,31 +160,31 @@
 // Tag result page
 .mytags {
     margin-top: 25px;
-	.tagfreq.badge {
-		background-color: $brand-primary;
-	}
+    .tagfreq.badge {
+        background-color: $brand-primary;
+    }
     .tag {
         margin-right: 10px;
     }
 }
 .mytags .selected,
 .tag-results .selected {
-	font-weight: bold;
+    font-weight: bold;
     color: $gray;
     .badge {
         background-color: $gray;
     }
 }
 .tag-results .btn-top-right {
-	margin-right: -1px;
-	margin-top: -41px;
+    margin-right: -1px;
+    margin-top: -41px;
 }
 .tag-filters {
-	background-color: #f5f5f5;
-	padding: 10px 15px;
+    background-color: #f5f5f5;
+    padding: 10px 15px;
 }
 .tag-type {
-	font-size: $font-size-large;
+    font-size: $font-size-large;
 }
 
 // reset the padding when the individual font file is collapsed in font install
@@ -196,4 +196,8 @@
 // Login panel
 .login-externallink {
     display: inline-block;
+}
+
+.form-group .select2-container .select2-selection .select2-search input[type=search] {
+    width: 100% !important;
 }
